test/types/enum/paramCompareDiffEnums.good
paramCompareDiffEnums.chpl:14: error: It works!
